[project]
name = "spring2025-lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitarray>=3.7.2",
    "einops>=0.8.1",
    "fasttext>=0.9.3",
    "jaxtyping>=0.3.3",
    "kenlm>=0.3.0",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.7",
    "mmh3>=5.2.0",
    "openai>=2.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "warcio>=1.7.5",
]
